UIUX-2006: elemental icon text alignment fixed in historical summary

--- a/sugarcrm/styleguide/less/sugar-specific/labels-badges.less
+++ b/sugarcrm/styleguide/less/sugar-specific/labels-badges.less
@@ -62,7 +62,7 @@ a > .label,
   font-size: 11px;
   line-height: 11px;
   padding: 3px 0 0 3px;
-
+  text-align: left;
   margin: 0;
   font-weight: 400;
   border: none;
